hard-gists/5907109/run.log
=== Docker Run Log for 5907109 ===
Started at: Mi 29. Okt 16:09:42 CET 2025

[2025-10-29 16:09:43] START: Running container for 5907109
[2025-10-29 16:09:43] SUCCESS: Container 3794c0b0353c372455a8bf5a7b193275171cadf8ab26f076bb292c8191b07c0b started for 5907109
=== Container logs for 5907109 ===
  File "/snippet.py", line 34
    print theName
    ^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 5907109 ===
[2025-10-29 16:09:45] INFO: Container 3794c0b0353c372455a8bf5a7b193275171cadf8ab26f076bb292c8191b07c0b has stopped
